divided page into two, added introductory text and social media icons

--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset = "utf-8">
+    <meta name = "viewport" content = "width = device-width, initial-scale = 1">
+
     <title>lisa's website</title>
+
+    <!--script for social media icons-->
+    <script src="https://kit.fontawesome.com/8e4d01be1f.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="style.css">
+
+    <!--font for introduction-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!--seperation of site into sidebar and main text area-->
+    <div class = "wrapper">
+      <!--side navigation for photo carousel-->
+      <div class = "sidebar">
+        <!-- testing some text -->
+        <h1>
+          sidebar text testing
+        </h1>
+      </div>
+
+      <div class = "main-content">
+        <h1>
+          hi, I'm Lisa
+        </h1>
+          <div class = "socials">
+            <a href = "#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href = "#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href = "#"><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+
+        <h2>
+          second year at UNSW studying computer science and economics. 
+        </h2>
+      </div>
+      
+      <!--three images visible for photo carousel-->
+    </div>
   </body>
   	</head>
   	<body>
